--- a/chroma-quest-of-speicture/export_presets.cfg
+++ b/chroma-quest-of-speicture/export_presets.cfg
@@ -14,14 +14,14 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=2
+script_export_mode=1
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=0
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
@@ -32,15 +32,15 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="/home/asaad/Downloads/the-Goose-icon.ico"
 application/console_wrapper_icon=""
-application/icon_interpolation=4
+application/icon_interpolation=0
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
+application/company_name="Lifeco"
+application/product_name="Goose-chemical-reaction"
+application/file_description="Game"
+application/copyright="Lifeco comming license"
 application/trademarks=""
 application/export_angle=0
 application/export_d3d12=0
